# watsonx-autodeploy

./: .gitignore  config.yaml  pyproject.toml  test.json
